Changed the violin plot of BCP-ALL adding sample 14

--- a/paper_analysis/scripts/NetworksAnalysis.ipynb
+++ b/paper_analysis/scripts/NetworksAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b8bd1236",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b5ba61dc",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,20 @@
     "            ratio_row.append(ratio)\n",
     "        ratios.append(ratio_row)\n",
     "    \n",
-    "    return ratios"
+    "    return ratios\n",
+    "\n",
+    "\n",
+    "def loading_comminity_from_folder (path_file : str) :\n",
+    "    onlyfiles = [f for f in os.listdir(path_file)]\n",
+    "    communities = pd.DataFrame()\n",
+    "    for f in onlyfiles :\n",
+    "        df = pd.read_csv(path_file+f ,delimiter=\"\\t\" , names = ['chr','start','end'])\n",
+    "        df[\"sites\"] = df['chr'].astype(str) +\"-\"+ df[\"start\"].astype(str)+\"-\"+ df[\"end\"].astype(str)\n",
+    "        \n",
+    "        df.drop(['chr','start','end'], axis  = 1 , inplace = True)\n",
+    "        df['community'] = f.split(\".tsv\")[0]\n",
+    "        communities = pd.concat([communities , df])\n",
+    "    return communities "
    ]
   },
   {
@@ -937,7 +950,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "0c167af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "communities_list_sp_df = loading_comminity_from_folder(\"/mnt/nas-safu/analysis/PhDsdigiove/method_coAcces/data/BALL/communities_broad/res_0_9/beds/\")\n",
+    "\n",
+    "communities_list_sp = []\n",
+    "for comm in sorted(set(communities_list_sp_df.community)) :\n",
+    "    # print(comm)\n",
+    "    #print(len(communities_list_sp_df.loc[communities_list_sp_df['community' ] == comm , 'sites'].tolist()) ) \n",
+    "    communities_list_sp.append(communities_list_sp_df.loc[communities_list_sp_df['community' ] == comm , 'sites'].tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "bbf4dbd3",
    "metadata": {},
    "outputs": [],
@@ -959,7 +988,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_groups = {\"Healthy\": 6, \"Primary\": 11 , \"Remission\":8 , \"Relapse\":7  }\n",
+    "patient_groups = {\"Healthy\": 6, \"Primary\": 11 , \"Remission\":8 , \"Relapse\":8  }\n",
     "order = [\"Healthy\", \"Primary\", \"Remission\", \"Relapse\"]\n",
     "data_matrix_df = pd.read_csv(\"/mnt/nas-safu/analysis/PhDsdigiove/method_coAcces/data/BALL/allPatientsPatientsNOMERGED_Ball_Multicov_nfcore.tsv\" , sep = \"\\t\" , index_col = \"peaks\" )\n",
     "data_matrix_df.columns = [\"6_Healthy\",\"9_Healthy\",\"4_Healthy\",\"7_Healthy\",\"5_Healthy\",\"8_Healthy\",\"14_Primary\",\"12_Primary\",\"10_Primary\",\"13_Primary\",\"11_Primary\",\"16_Primary\",\"7_Primary\",\"19_Primary\",\"17_Primary\",\"27_Primary\",\"26_Primary\",\"21_Remission\",\"22_Remission\",\"18_Remission\",\"26_Remission\",\"20_Remission\",\"25_Remission\",\"23_Remission\",\"24_Remission\",\"31_Relapse\",\"28_Relapse\",\"29_Relapse\",\"33_Relapse\",\"32_Relapse\",\"27_Relapse\",\"30_Relapse\",\"14_Relapse\",]\n",
