THP1 corrected file

--- a/paper_analysis/scripts/NetworksAnalysis.ipynb
+++ b/paper_analysis/scripts/NetworksAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b8bd1236",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b5ba61dc",
    "metadata": {},
    "outputs": [],
@@ -121,13 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3b3b37d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading correlation matrix\n",
-    "e = pd.read_hdf('/mnt/nas-safu/analysis/PhDsdigiove/method_coAcces/data/CellReport/out_mutlicov_matrix/lognorm_edgeR_limma_countsInCellReport_TheiCounts_NoStatic_mean_Spearman.h5')\n",
+    "#e = pd.read_hdf('/mnt/nas-safu01/analysis/PhDsdigiove/method_coAcces/data/CellReport/out_mutlicov_matrix/lognorm_edgeR_limma_countsInCellReport_TheiCounts_NoStatic_mean_Spearman.h5')\n",
+    "e = pd.read_hdf('/mnt/nas-safu01/analysis/scripts/ScriptSdigiove/RegNetATACProject/prova_thp1/out_thp1_prova.h5')\n",
     "e_df = e.reset_index()\n",
     "\n",
     "# Freeing space\n",
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8f45f7cb",
    "metadata": {},
    "outputs": [],
@@ -147,20 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f0ba55ad",
+   "execution_count": null,
+   "id": "b974d1b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "43446\n",
-      "80873018\n",
-      "0.08569274336648137\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Evaluating network characteristics\n",
     "print(G.vcount())\n",
@@ -240,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6661632a",
    "metadata": {},
    "outputs": [],
@@ -250,24 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "703566f1",
+   "execution_count": null,
+   "id": "8bf7d7c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8814\n",
-      "8315\n",
-      "7341\n",
-      "6689\n",
-      "4872\n",
-      "4075\n",
-      "3340\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x in communities :\n",
     "    if len(x) > 100 :\n",
@@ -940,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8f841938",
    "metadata": {},
    "outputs": [],
@@ -950,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0c167af4",
    "metadata": {},
    "outputs": [],
@@ -966,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bbf4dbd3",
    "metadata": {},
    "outputs": [],
