Files refinment for Zenodo

--- a/vignette/Vignette1_BuildingAndAnalysis.ipynb
+++ b/vignette/Vignette1_BuildingAndAnalysis.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "fb665260",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
    "source": [
     "communities_list = tchronet_utils.get_communities_names(G , communities)\n",
     "\n",
-    "counts_path = \"/mnt/nas-safu01/analysis/scripts/ScriptSdigiove/RegNetATACProject/T-ChroNet/vignette/data/thp1_test.tsv\"\n",
+    "counts_path = \"./data/thp1_test.tsv\"\n",
     "data_matrix_df = pd.read_csv(counts_path , sep = \"\\t\" , index_col = 0 )\n",
     "\n",
     "tchronet_utils.plot_trends_zscore( communities_list , data_matrix_df , custom_ylim=(-2 , 2) )\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "1a4c9a12",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
     }
    ],
    "source": [
-    "homer_annotation_path = \"/mnt/nas-safu01/analysis/scripts/ScriptSdigiove/RegNetATACProject/T-ChroNet/vignette/results/thp1_test_anontations.txt\"\n",
+    "homer_annotation_path = \"./results/thp1_test_anontations.txt\"\n",
     "\n",
     "annotation = tchronet_utils.transform_annotation_homer(homer_annotation_path)\n",
     "final_annotation = tchronet_utils.genomic_position_stackbar(communities_list, annotation)\n",
